--- a/FinanceBreakDown/Views/Finance/Display.cshtml
+++ b/FinanceBreakDown/Views/Finance/Display.cshtml
@@ -6,7 +6,7 @@
 <div id="finance-form">
     <h2 id="finance-formTitle-label">Summary</h2>
     <div>
-        You make $@Model.income.amount per month. <br />
+        You make $@Model.income.amount per week. <br />
         You spend $@ViewBag.total in bills. <br />
         You have $@ViewBag.Difference left after <br /> 
         paying your bills for the week.
